Overflow bug fixed + togglePassword managed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,7 @@
 
 * {
   margin: 0;
+  overflow:hidden;
 }
 
 html, body {
